--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -1,9 +1,10 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0
+WORKDIR /source
 
 COPY *.csproj .
 RUN dotnet restore
 
 COPY . .
-RUN dotnet publish -c Release -o /app --no-restore
+RUN dotnet publish -c Release -o app --no-restore
 
 ENTRYPOINT ["dotnet", "app/Runner.dll"]
