Fix all the things

--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -1,10 +1,17 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0
+FROM mcr.microsoft.com/dotnet/sdk:6.0-jammy as build-jitutils
 WORKDIR /source
+RUN git clone --no-tags --single-branch https://github.com/dotnet/jitutils.git && cd jitutils && ./bootstrap.sh
 
+FROM mcr.microsoft.com/dotnet/sdk:6.0-jammy as build-runner
+WORKDIR /source
 COPY *.csproj .
 RUN dotnet restore
-
 COPY . .
-RUN dotnet publish -c Release -o app --no-restore
+RUN dotnet publish -c Release -o /runner --no-restore
 
-ENTRYPOINT ["dotnet", "app/Runner.dll"]
+FROM mcr.microsoft.com/dotnet/sdk:6.0-jammy
+COPY --from=build-runner /runner /runner
+COPY --from=build-jitutils /source/jitutils/bin /runner/bin
+
+WORKDIR /runner
+ENTRYPOINT ["dotnet", "Runner.dll"]
