--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -12,8 +12,7 @@ RUN dotnet publish -c Release -o /runner --no-restore
 FROM mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-22.04
 COPY --from=build-runner /runner /runner
 COPY --from=build-jitutils /source/jitutils/bin /runner/bin
-RUN apt-get update && apt-get install zip -y
-RUN apt-get install -y dotnet-sdk-6.0
+RUN apt-get update && apt-get install -y zip wget dotnet-sdk-6.0
 
 WORKDIR /runner
 ENTRYPOINT ["dotnet", "Runner.dll"]
