--- a/Runner/script.sh.template
+++ b/Runner/script.sh.template
@@ -5,14 +5,10 @@ eng/install-native-dependencies.sh linux
 
 ./build.sh clr+libs -c Release
 ./build.sh clr -c Checked
-cd src/tests
-./build.sh Release generatelayoutonly
-cd ../..
 
 mkdir ../artifacts-main
-mkdir ../artifacts-pr
-cp -r artifacts/tests/coreclr/linux.x64.Release/Tests/Core_Root/* ../artifacts-main
-cp -r artifacts/tests/coreclr/linux.x64.Release/Tests/Core_Root/* ../artifacts-pr
+cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-main
+cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-main
 
 git remote add other https://github.com/{{SOURCE_REPOSITORY}}
 git fetch other {{SOURCE_BRANCH}}
@@ -21,9 +17,12 @@ git config --global user.email build@build.foo
 git config --global user.name build
 git merge --no-edit other/{{SOURCE_BRANCH}}
 
-./build.sh clr.CoreLib -c Release
+./build.sh clr+libs.pretest -rc Release -c Release
 
-cp -r artifacts/bin/coreclr/linux.x64.Release/IL/System.Private.CoreLib.dll ../artifacts-pr
+mkdir ../artifacts-pr
+cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-pr
+cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-pr
+
 cd ..
 
 wget https://dot.net/v1/dotnet-install.sh
