--- a/Runner/script.sh.template
+++ b/Runner/script.sh.template
@@ -10,32 +10,27 @@ git config --global user.email build@build.foo
 git config --global user.name build
 git merge --no-edit other/{{SOURCE_BRANCH}}
 
-git checkout main
-
 eng/install-native-dependencies.sh linux
 
+mkdir ../artifacts-main
+mkdir ../artifacts-pr
+mkdir ../clr-checked-main
+mkdir ../clr-checked-pr
+
+git checkout main
 ./build.sh clr+libs -c Release
 ./build.sh clr -c Checked
-cd src/tests
-./build.sh Release generatelayoutonly
-cd ../..
 
-mkdir ../artifacts-main
-mkdir ../clr-checked-main
-cp -r artifacts/tests/coreclr/linux.x64.Release/Tests/Core_Root/* ../artifacts-main
+cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-main
+cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-main
 cp -r artifacts/bin/coreclr/linux.x64.Checked/* ../clr-checked-main
 
 git checkout pr
+./build.sh clr.corelib+clr.nativecorelib+libs.pretest -c Release
+./build.sh clr -c Checked
 
-./build.sh clr+libs.pretest -c Checked
-./build.sh clr.CoreLib -c Release
-cd src/tests
-./build.sh Release generatelayoutonly
-cd ../..
-
-mkdir ../artifacts-pr
-mkdir ../clr-checked-pr
-cp -r artifacts/tests/coreclr/linux.x64.Release/Tests/Core_Root/* ../artifacts-pr
+cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-pr
+cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-pr
 cp -r artifacts/bin/coreclr/linux.x64.Checked/* ../clr-checked-pr
 
 cd ..
