--- a/Runner/script.sh.template
+++ b/Runner/script.sh.template
@@ -1,11 +1,13 @@
 git clone --no-tags --single-branch --progress https://github.com/dotnet/runtime
 cd runtime
 git log -1
+chmod 777 build.sh
 
 git remote add other https://github.com/{{SOURCE_REPOSITORY}}
 git fetch other {{SOURCE_BRANCH}}
 git log other/{{SOURCE_BRANCH}} -1
-git checkout -b pr
+git switch -c pr
+git reset --hard origin/main
 git config --global user.email build@build.foo
 git config --global user.name build
 git merge --no-edit other/{{SOURCE_BRANCH}}
@@ -17,17 +19,17 @@ mkdir ../artifacts-pr
 mkdir ../clr-checked-main
 mkdir ../clr-checked-pr
 
-git checkout main
+git switch main
 ./build.sh clr+libs -c Release
-./build.sh clr -c Checked
+./build.sh clr.jit -c Checked
 
 cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-main
 cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-main
 cp -r artifacts/bin/coreclr/linux.x64.Checked/* ../clr-checked-main
 
-git checkout pr
-./build.sh clr.corelib+clr.nativecorelib+libs.pretest -c Release
-./build.sh clr -c Checked
+git switch pr
+./build.sh clr+libs -c Release
+./build.sh clr.jit -c Checked
 
 cp -r artifacts/bin/coreclr/linux.x64.Release/* ../artifacts-pr
 cp -r artifacts/bin/runtime/net8.0-linux-Release-x64/* ../artifacts-pr
@@ -36,7 +38,7 @@ cp -r artifacts/bin/coreclr/linux.x64.Checked/* ../clr-checked-pr
 cd ..
 
 wget https://dot.net/v1/dotnet-install.sh
-chmod +x dotnet-install.sh
+chmod 777 dotnet-install.sh
 ./dotnet-install.sh --jsonfile runtime/global.json --install-dir /usr/lib/dotnet
 
 mkdir jit-diffs
