Use metadata endpoint, cache initial git clone

--- a/Runner/script.sh.template
+++ b/Runner/script.sh.template
@@ -1,5 +1,5 @@
-git clone --no-tags --single-branch --progress https://github.com/dotnet/runtime
 cd runtime
+git pull --progress origin main
 git log -1
 chmod 777 build.sh
 
