Move some setup out of the docker image

--- a/Runner/Dockerfile
+++ b/Runner/Dockerfile
@@ -1,7 +1,3 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0-jammy as build-jitutils
-WORKDIR /source
-RUN git clone --no-tags --single-branch https://github.com/dotnet/jitutils.git && cd jitutils && ./bootstrap.sh
-
 FROM mcr.microsoft.com/dotnet/sdk:6.0-jammy as build-runner
 WORKDIR /source
 COPY *.csproj .
@@ -11,10 +7,7 @@ RUN dotnet publish -c Release -o /runner --no-restore
 
 FROM mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-22.04
 COPY --from=build-runner /runner /runner
-COPY --from=build-jitutils /source/jitutils/bin /runner/bin
-RUN apt-get update && \
-    apt-get install -y zip wget dotnet-sdk-6.0 && \
-    git clone --no-tags --single-branch --progress https://github.com/dotnet/runtime /runner/runtime
+RUN apt-get update && apt-get install -y dotnet-sdk-6.0
 
 WORKDIR /runner
 ENTRYPOINT ["dotnet", "Runner.dll"]
