Try to parallelize some steps

--- a/Runner/Runner.csproj
+++ b/Runner/Runner.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="script.sh.template">
+    <None Update="setup-runtime.sh.template">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
