--- a/Runner/Runner.csproj
+++ b/Runner/Runner.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
     <PackageReference Include="Hardware.Info" Version="100.1.0" />
   </ItemGroup>
 
