--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ stages:
   jobs:
   - job: run
     pool: runtime-utils
+    timeoutInMinutes: 310
     steps:
       - bash: |
           cd Runner
